--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,19 +3,16 @@
 ---
 <nav class="bg-gray-800 text-white p-4">
     <div class="container mx-auto flex justify-between items-center">
-        <div class="text-lg font-bold">Adios Archive</div>
+        <a class="text-lg font-bold" href="/" >Adios Archive</a>
         <ul class="flex">
             <li class="ml-6">
-                <a href="#" class="hover:underline">Home</a>
+                <a href="/" class="hover:underline">Home</a>
             </li>
             <li class="ml-6">
-                <a href="#" class="hover:underline">About</a>
+                <a href="/adios-picture" class="hover:underline">Adios</a>
             </li>
             <li class="ml-6">
-                <a href="#" class="hover:underline">Services</a>
-            </li>
-            <li class="ml-6">
-                <a href="#" class="hover:underline">Contact</a>
+                <a href="/donate" class="hover:underline">Donate</a>
             </li>
         </ul>
     </div>
