--- a/src/components/PictureGrid.astro
+++ b/src/components/PictureGrid.astro
@@ -1,7 +1,7 @@
 ---
 // Fetch the JSON data from an API endpoint
 
-const response = await fetch(`${import.meta.env.PUBLIC_API_URL}/messages/images`);
+const response = await fetch(`${import.meta.env.PUBLIC_API_URL}/messages/images?page=1&limit=20`);
 const data = await response.json();
 
 // Extract the imageUrl from the JSON data
