feat: add contributer

--- a/src/components/Adios/AdiosHeader.astro
+++ b/src/components/Adios/AdiosHeader.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class = "flex items-center justify-center flex-col space-y-2 text-white">
+<div class = "flex items-center justify-center flex-col space-y-2 text-black mb-8">
     <h1 class = "text-4xl font-bold">Adios Pictures</h1>
     <p class="text-md font-semibold text-center">Take a look to the efforts that we put in</p>
 </div>
