--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,9 @@
 ---
 // Ensure Tailwind is configured in your Astro project
 ---
-<nav class="bg-gray-800 text-white p-4">
+<nav class="text-black py-6">
     <div class="container mx-auto flex justify-between items-center">
-        <a class="text-lg font-bold" href="/" >Adios Archive</a>
+        <a class="text-xl font-bold" href="/" >Adios Archive</a>
         <ul class="flex">
             <li class="ml-6">
                 <a href="/" class="hover:underline">Home</a>
