--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,7 +42,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: "Poppins", sans-serif;
-		background: #13151a;
+		background: rgb(255, 255, 255);
 		background-size: 224px;
 	}
 	code {
