--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,46 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/Home/Header.astro";
-import Card from "../components/Home/Card.astro";
 import Stat from "../components/Home/Stat.astro";
+import Image from "astro/components/Image.astro";
+import grassImage from "../../public/grass.jpeg";
+import MemberPanel from "../components/Member/MemberPanel.tsx";
+import type {Member} from "../@types/member";
+const fetchMember = async () => {
+    const res = await fetch(`${import.meta.env.PUBLIC_API_URL}/api/members`);
+    if (!res.ok) {
+        throw new Error("Failed to fetch members");
+    }
+    const data = await res.json();
+    return data;
+};
+
+const adiosContributersUsername = [
+    "lobster567",
+    "gelocup",
+    "pun6",
+    "ezthatmyname",
+    "sillysuperpoop",
+]
+
+const membersData = await fetchMember();
+
+const members = membersData.filter((member: Member) => adiosContributersUsername.includes(member.username));
+
 ---
 
 <Layout title="Adios">
-	<main
-		class="flex items-center justify-center h-full w-full py-24 flex-col space-y-36 flex-wrap"
-	>
-		<Header />
-		<div class="flex flex-col items-center justify-center space-y-24">
-			<h1 class="text-5xl font-bold text-white text-center">Latest Adios Picture</h1>
-			<div class="flex items-center justify-center flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-16 p-10">
-				<Card />
-				<Card />
-				<Card />
-			</div>
-		</div>
-		<Stat/>
-	</main>
+    <main class="flex flex-col items-center justify-center h-full w-full space-y-36 p-6">
+        <section class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center justify-center text-black p-10">
+            <div class="space-y-8 flex flex-col px-16">
+                <h1 class="text-5xl font-bold">Adios Memories</h1>
+                <p class="text-lg">Every day, my friend sends a special photograph called an <span class="font-bold">Adios Picture</span> in our Discord server, which is a ritual to reflect on the day and look forward to the next.</p>
+                <a class="text-center bg-red-400 p-5 text-xl font-bold rounded-2xl shadow-lg w-full text-white hover:bg-red-500 transtion-all duration-500" href="/adios-picture">View Pictures</a>
+            </div>
+            <div class="flex items-center justify-center ">
+                <Image src={grassImage} alt="Sing Image" class="rounded-lg" />
+            </div>
+        </section>
+        <MemberPanel members = {members}/>
+        <Stat />
+    </main>
 </Layout>
-<style></style>
