--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 // Ensure Tailwind is configured in your Astro project
 ---
-<nav class="text-black py-6">
+<nav class="text-black p-8">
     <div class="container mx-auto flex justify-between items-center">
         <a class="text-xl font-bold" href="/" >Adios Archive</a>
         <ul class="flex">
