--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,18 +26,19 @@ const membersData = await fetchMember();
 
 const members = membersData.filter((member: Member) => adiosContributersUsername.includes(member.username));
 
+
 ---
 
 <Layout title="Adios">
     <main class="flex flex-col items-center justify-center h-full w-full space-y-36 p-6">
-        <section class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center justify-center text-black p-10">
+        <section class="grid grid-cols-1 md:grid-cols-2 gap-4 items-center justify-center text-black p-10">
             <div class="space-y-8 flex flex-col px-16">
                 <h1 class="text-5xl font-bold">Adios Memories</h1>
                 <p class="text-lg">Every day, my friend sends a special photograph called an <span class="font-bold">Adios Picture</span> in our Discord server, which is a ritual to reflect on the day and look forward to the next.</p>
                 <a class="text-center bg-red-400 p-5 text-xl font-bold rounded-2xl shadow-lg w-full text-white hover:bg-red-500 transtion-all duration-500" href="/adios-picture">View Pictures</a>
             </div>
-            <div class="flex items-center justify-center ">
-                <Image src={grassImage} alt="Sing Image" class="rounded-lg" />
+            <div class="flex items-center justify-center">
+                <Image src={grassImage} alt="Sing Image" class="rounded-lg max-h-96 max-w-96" />
             </div>
         </section>
         <MemberPanel members = {members}/>
