--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,13 +2,13 @@
 
 ---
 
-<footer class="bg-red-500 text-white text-center py-16">
+<footer class="bg-red-500 text-black text-center py-16 bg-white">
   <div class="container mx-auto max-w-full">
     <ul class="flex justify-center space-x-4">
-      <li><a href="/about" class="hover:text-gray-200">About Us</a></li>
-      <li><a href="/services" class="hover:text-gray-200">Services</a></li>
-      <li><a href="/contact" class="hover:text-gray-200">Contact</a></li>
-      <li><a href="/privacy" class="hover:text-gray-200">Privacy Policy</a></li>
+      <li><a href="/about" class="hover:underline">About Us</a></li>
+      <li><a href="/services" class="hover:underline">Services</a></li>
+      <li><a href="/contact" class="hover:underline">Contact</a></li>
+      <li><a href="/privacy" class="hover:underline">Privacy Policy</a></li>
     </ul>
   </div>
 </footer>
