--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const members = membersData.filter((member: Member) =>
 
 <Layout title="Adios">
     <main
-        class="flex flex-col items-center justify-center h-full w-full space-y-36"
+        class="flex flex-col items-center justify-center h-full w-full space-y-36 mt-8"
     >
         <section
             class="flex flex-col md:flex-row text-black p-10 space-x-8"
