--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,10 @@
 ---
 <nav class="text-black p-8">
     <div class="container mx-auto flex justify-between items-center">
-        <a class="text-xl font-bold" href="/" >Adios Archive</a>
+        <div class="flex space-x-2 items-center justify-center">
+            <img src = "/logo.svg" alt = "Adios Archive Logo" class = "w-6 h-6" />
+            <a class="text-xl font-bold" href="/" >Adios Archive</a>
+        </div>
         <ul class="flex">
             <li class="ml-6">
                 <a href="/" class="hover:underline">Home</a>
