--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,11 @@
 ---
-
 ---
 
 <footer class="bg-red-500 text-black text-center py-16 bg-white">
   <div class="container mx-auto max-w-full">
-    <ul class="flex justify-center space-x-4">
-      <li><a href="/about" class="hover:underline">About Us</a></li>
-      <li><a href="/services" class="hover:underline">Services</a></li>
-      <li><a href="/contact" class="hover:underline">Contact</a></li>
-      <li><a href="/privacy" class="hover:underline">Privacy Policy</a></li>
-    </ul>
+    <a class="flex justify-center space-x-2" href = "https://github.com/punchanabu">
+      <img src = {'../../public/github.svg'} alt="github" class="w-6 h-6"/>
+      <p>Made by punchanabu</p>
+    </a>
   </div>
 </footer>
