--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
 <footer class="bg-red-500 text-black text-center py-16 bg-white">
   <div class="container mx-auto max-w-full">
     <a class="flex justify-center space-x-2" href = "https://github.com/punchanabu">
-      <img src = {'../../public/github.svg'} alt="github" class="w-6 h-6"/>
+      <img src = {'/github.svg'} alt="github" class="w-6 h-6"/>
       <p>Made by punchanabu</p>
     </a>
   </div>
